<resources>
    <string name="app_name">Movie Zone</string>
    <string name="tv_shows_most_popular">TV Shows | Most popular</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_have_an_account">dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="movies">Movies</string>
    <string name="trending">Trending</string>
    <string name="todo">TODO</string>
</resources>