<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable
            name="isLoading"
            type="Boolean" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:animateLayoutChanges="true"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:background="@drawable/toolbar_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/noun_menu_2569521"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textStyle="normal"
                    android:textColor="#292b3a"
                    android:textSize="@dimen/_25ssp"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="@dimen/_13ssp"
                    android:text="@string/movies"
                    android:layout_centerInParent="true"/>

                <ImageView
                    android:id="@+id/imageSearch"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/noun_search_875351"
                    app:tint="#292b3a"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:textStyle="normal"
                android:textSize="@dimen/_18ssp"
                android:textColor="#292b3a"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="@dimen/_9sdp"
                android:text="@string/trending"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layoutHeader"
            app:layout_constraintEnd_toEndOf="@id/layoutHeader"
            app:layout_constraintTop_toTopOf="@id/layoutHeader"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_20sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvShowsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/trendingRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_12sdp"/>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>